added code for url redirect in app from notification

--- a/src/main/assets/capacitor.config.json
+++ b/src/main/assets/capacitor.config.json
@@ -4,5 +4,14 @@
 	"webDir": "dist/society-management-ui/browser",
 	"server": {
 		"androidScheme": "https"
+	},
+	"plugins": {
+		"PushNotifications": {
+			"presentationOptions": [
+				"badge",
+				"sound",
+				"alert"
+			]
+		}
 	}
 }
