--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -22,7 +22,34 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+          <intent-filter>
+            <action android:name="OPEN_FROM_NOTIFICATION" />
+            <category android:name="android.intent.category.DEFAULT" />
+          </intent-filter>
+
+          <intent-filter android:autoVerify="true">
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="https" android:host="yourdomain.com" />
+          </intent-filter>
+
         </activity>
+
+        <service
+          android:name="com.saurabhkumarbusiness.societymanagement.MyFirebaseMessagingService"
+          android:exported="false">
+          <intent-filter>
+            <action android:name="com.google.firebase.MESSAGING_EVENT" />
+          </intent-filter>
+        </service>
+        <meta-data
+          android:name="com.google.firebase.messaging.default_notification_channel_id"
+          android:value="@string/default_notification_channel_id" />
+
+        <meta-data
+          android:name="com.google.firebase.messaging.default_notification_color"
+          android:resource="@color/colorAccent" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
